--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,255 @@ img {
 }
 
 .container {
-  width: 90%;
+  width: 80%;
   margin: 0 auto;
+}
+
+button {
+  padding: 15px 40px;
+  color: #fff;
+  background-color: #f8a055;
+  text-transform: uppercase;
+  border: none;
+  font-size: 0.9rem;
+  cursor: pointer;
+  -webkit-transition: 0.4s ease;
+  transition: 0.4s ease;
+  margin-top: 20px;
+  letter-spacing: 2px;
+  color: #221f1a;
+  font-size: 0.9rem;
+}
+
+button:hover {
+  background-color: #988d51;
+}
+
+nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+nav .logo {
+  color: #f8a055;
+  font-weight: 800;
+  font-size: 2rem;
+  line-height: 1;
+}
+
+nav .logo span {
+  color: #221f1a;
+  font-style: italic;
+  font-weight: 400;
+}
+
+nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+nav ul li {
+  margin-left: 60px;
+  font-size: 1rem;
+  font-weight: 600;
+  padding: 10px 0;
+  cursor: pointer;
+}
+
+nav ul li:first-child {
+  margin-left: 0px;
+}
+
+nav ul li:hover > a {
+  -webkit-transform: scale(120%);
+          transform: scale(120%);
+}
+
+nav ul li a {
+  display: block;
+  -webkit-transition: 0.4s ease;
+  transition: 0.4s ease;
+  height: 100%;
+}
+
+.indexHeader {
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0.99)), to(rgba(255, 255, 255, 0.1))), url(../img/header.jpg);
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0.99), rgba(255, 255, 255, 0.1)), url(../img/header.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 80vh;
+}
+
+.indexHeader .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+}
+
+.indexHeader hgroup {
+  width: 50%;
+  padding: 50px;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0.1)), to(rgba(255, 255, 255, 0.8)));
+  background: linear-gradient(to right, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.8));
+}
+
+.indexHeader hgroup h1 {
+  color: #f8a055;
+  text-shadow: 0 0 2px #221f1a;
+  font-size: 3.5rem;
+}
+
+.indexHeader hgroup h4 {
+  color: #221f1a;
+  font-weight: 400;
+  font-size: 1rem;
+}
+
+footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+footer article:nth-child(1) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 320px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 60%;
+          flex: 0 0 60%;
+  background: rgba(90, 87, 78, 0.85);
+  color: #fff;
+  padding: 0 0 0 60px;
+}
+
+footer article:nth-child(1) h4 {
+  font-weight: 800;
+  font-size: 1.2rem;
+}
+
+footer article:nth-child(1) address {
+  font-style: normal;
+  font-weight: 600;
+  margin-top: 30px;
+}
+
+footer article:nth-child(2) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  color: #fff;
+  padding: 0 0 0 60px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 40%;
+          flex: 0 0 40%;
+  background: rgba(248, 160, 85, 0.85);
+}
+
+footer article:nth-child(2) h2 {
+  font-size: 3rem;
+}
+
+footer article:nth-child(2) li {
+  font-weight: 600;
+}
+
+footer article:nth-child(2) i {
+  text-shadow: 0 0 2px #221f1a;
+  margin-right: 5px;
+}
+
+footer article:last-child {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 100%;
+          flex: 0 0 100%;
+  text-align: center;
+  padding: 15px 0;
+}
+
+footer article:last-child p {
+  font-weight: 400;
+}
+
+footer article:last-child p span {
+  color: #f8a055;
+  font-weight: 600;
 }
 /*# sourceMappingURL=style.css.map */
