--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,2 +1,129 @@
 @import "starter";
 @import "mixins";
+
+// global
+button {
+    @include btn($orange, $green);
+    margin-top: 20px;
+    letter-spacing: 2px;
+    color: $black;
+    font-size: 0.9rem;
+}
+
+// navigation
+nav {
+    @include flex(space-between, center);
+    .logo {
+        color: $orange;
+        font-weight: 800;
+        font-size: 2rem;
+        line-height: 1;
+        span {
+            color: $black;
+            font-style: italic;
+            font-weight: 400;
+        }
+    }
+    ul {
+        @include flex(flex-end, center);
+        li {
+            margin-left: 60px;
+            font-size: 1rem;
+            font-weight: 600;
+            padding: 10px 0;
+            cursor: pointer;
+            &:first-child {
+                margin-left: 0px;
+            }
+            &:hover {
+                & > a {
+                    transform: scale(120%);
+                }
+            }
+            a {
+                display: block;
+                transition: $transition;
+                height: 100%;
+            }
+        }
+    }
+}
+
+// indexHeader
+.indexHeader {
+    background-image: linear-gradient(to right, rgba($white, 0.99), rgba($white, 0.1)), url(../img/header.jpg);
+    @include bgBasic();
+    height: 80vh;
+    .container {
+        @include flex(center, flex-start, column);
+        height: 100%;
+    }
+    hgroup {
+        width: 50%;
+        padding: 50px;
+        background: linear-gradient(to right, rgba($white, 0.1), rgba($white, 0.8));
+        h1 {
+            color: rgba($orange, 1);
+            text-shadow: $textShadow;
+            font-size: 3.5rem;
+        }
+        h4 {
+            color: $black;
+            font-weight: 400;
+            font-size: 1rem;
+        }
+    }
+}
+
+// footer
+footer {
+    @include flex(space-between, stretch);
+    article {
+        &:nth-child(1) {
+            @include flex(center, flex-start, column);
+            height: 320px;
+            flex: 0 0 60%;
+            background: rgba($gray, 0.85);
+            color: $white;
+            padding: 0 0 0 60px;
+            h4 {
+                font-weight: 800;
+                font-size: 1.2rem;
+            }
+            address {
+                font-style: normal;
+                font-weight: 600;
+                margin-top: 30px;
+            }
+        }
+        &:nth-child(2) {
+            @include flex(center, flex-start, column);
+            color: $white;
+            padding: 0 0 0 60px;
+            flex: 0 0 40%;
+            background: rgba($orange, 0.85);
+            h2 {
+                font-size: 3rem;
+            }
+            li {
+                font-weight: 600;
+            }
+            i {
+                text-shadow: $textShadow;
+                margin-right: 5px;
+            }
+        }
+        &:last-child {
+            flex: 0 0 100%;
+            text-align: center;
+            padding: 15px 0;
+            p {
+                font-weight: 400;
+                span {
+                    color: $orange;
+                    font-weight: 600;
+                }
+            }
+        }
+    }
+}
