--- a/scss/style.scss
+++ b/scss/style.scss
@@ -75,6 +75,35 @@ nav {
     }
 }
 
+// about
+.about {
+    @include flex(space-between, stretch);
+    padding: 100px 0;
+    article {
+        flex: 0 0 48%;
+        h2 {
+            color: $black;
+            font-weight: 800;
+            font-size: 3rem;
+            span {
+                font-weight: 400;
+                font-style: italic;
+            }
+        }
+        h3 {
+            color: $orange;
+            text-shadow: $textShadow;
+            font-size: 5rem;
+        }
+        h4 {
+            color: $black;
+            font-weight: 800;
+            font-size: 1.5rem;
+            margin-bottom: 30px;
+        }
+    }
+}
+
 // footer
 footer {
     @include flex(space-between, stretch);
