--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -13,12 +13,19 @@
 }
 @mixin btn($bgColor, $bgHover) {
   font-family: $fontFamily;
-  padding: 15px 40px;
-  color: $white;
+
   background-color: $bgColor;
   text-transform: uppercase;
   border: none;
   font-size: 0.9rem;
+
+  margin-top: 20px;
+  letter-spacing: 3px;
+  color: $black;
+  font-weight: 600;
+  font-size: 0.8rem;
+  padding: 15px 35px;
+
   cursor: pointer;
   transition: $transition;
   &:hover {
