responsive max-width 767px

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -27,7 +27,7 @@
   padding: 15px 35px;
 
   cursor: pointer;
-  transition: $transition;
+  transition: background-color $transition;
   &:hover {
     background-color: $bgHover;
   }
