--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,7 @@ button {
 // navigation
 nav {
     @include flex(space-between, center);
+    padding: 10px 0;
     .logo {
         color: $orange;
         font-weight: 800;
@@ -22,12 +23,19 @@ nav {
     }
     ul {
         @include flex(flex-end, center);
+        @media (max-width: 767px) {
+            width: 100%;
+            justify-content: space-around;
+        }
         li {
             margin-left: 60px;
             font-size: 1rem;
             font-weight: 600;
             padding: 10px 0;
             cursor: pointer;
+            @media (max-width: 767px) {
+                margin-left: 0px;
+            }
             &:first-child {
                 margin-left: 0px;
             }
@@ -50,18 +58,33 @@ nav {
     background-image: linear-gradient(to right, rgba($white, 0.99), rgba($white, 0.1)), url(../img/header.jpg);
     @include bgBasic();
     height: 80vh;
+    @media (max-width: 767px) {
+        height: 60vh;
+    }
     .container {
         @include flex(center, flex-start, column);
         height: 100%;
+        @media (max-width: 767px) {
+            align-content: center;
+            width: 100%;
+        }
     }
     hgroup {
         width: 50%;
         padding: 50px;
         background: linear-gradient(to right, rgba($white, 0.1), rgba($white, 0.8));
+        @media (max-width: 767px) {
+            width: 100%;
+            padding: 30px;
+            text-align: center;
+        }
         h1 {
             color: rgba($orange, 1);
             text-shadow: $textShadow;
             font-size: 3rem;
+            @media (max-width: 767px) {
+                line-height: 1.5;
+            }
         }
         h4 {
             color: $black;
@@ -80,14 +103,23 @@ nav {
         width: 50%;
         padding: 0px;
         background: none;
+        @media (max-width: 767px) {
+            width: 100%;
+        }
     }
 }
 // about
 .about {
     @include flex(space-between, stretch);
     padding: 100px 0;
+    @media (max-width: 767px) {
+        padding: 50px 0;
+    }
     article {
         flex: 0 0 48%;
+        @media (max-width: 767px) {
+            flex: 0 0 100%;
+        }
         h2 {
             color: $black;
             font-weight: 800;
@@ -95,6 +127,10 @@ nav {
             span {
                 font-weight: 400;
                 font-style: italic;
+            }
+            @media (max-width: 767px) {
+                text-align: center;
+                line-height: 1.3;
             }
         }
         h3 {
@@ -115,9 +151,15 @@ nav {
 .green {
     padding: $padding;
     background-image: linear-gradient(rgba($white, 0.15), rgba($white, 0.15)), url(../img/bg.jpg);
+    @media (max-width: 767px) {
+        background-image: linear-gradient(rgba($white, 0.15), rgba($white, 0.15)), url(../img/bg2.jpg);
+    }
     @include bgBasic;
     .container {
         @include flex(space-between, center);
+        @media (max-width: 767px) {
+            flex-direction: column;
+        }
         div {
             flex: 0 0 45%;
             p {
@@ -129,6 +171,17 @@ nav {
                 font-size: 3rem;
                 margin-bottom: 30px;
             }
+            &:first-child {
+                @media (max-width: 767px) {
+                    order: 2;
+                }
+            }
+            &:last-child {
+                @media (max-width: 767px) {
+                    order: 1;
+                    margin-bottom: 20px;
+                }
+            }
         }
     }
 }
@@ -139,12 +192,28 @@ nav {
     background-color: rgba($gray, 0.85);
     background-image: linear-gradient(rgba($white, 0.15), rgba($white, 0.15)), url(../img/bg2.jpg);
     @include bgBasic(center top, 100% 60%);
+    div {
+        &:first-child {
+            @media (max-width: 767px) {
+                order: 1 !important;
+                margin-bottom: 20px;
+            }
+        }
+        &:last-child {
+            @media (max-width: 767px) {
+                order: 2 !important;
+            }
+        }
+    }
 }
 
 // proizvodnja
 .proizvodnja {
     background-color: rgba($orange, 0.85);
     @include flex(space-between, stretch);
+    @media (max-width: 767px) {
+        flex-direction: column-reverse;
+    }
     article {
         @include flex(center, center, column);
         flex: 1;
@@ -163,6 +232,9 @@ nav {
         }
         button {
             @include btn($white, $green);
+            @media (max-width: 767px) {
+                margin-bottom: 30px;
+            }
         }
     }
 }
@@ -170,6 +242,9 @@ nav {
 // footer
 footer {
     @include flex(space-between, stretch);
+    @media (max-width: 767px) {
+        flex-direction: column;
+    }
     article {
         &:nth-child(1) {
             @include flex(center, flex-start, column);
@@ -216,6 +291,9 @@ footer {
                     font-weight: 600;
                 }
             }
+        }
+        @media (max-width: 767px) {
+            padding: 15px 10% !important;
         }
     }
 }
