--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,12 @@ img {
   margin: 0 auto;
 }
 
+@media (max-width: 767px) {
+  .container {
+    width: 90%;
+  }
+}
+
 button {
   font-family: "Open Sans", sans-serif;
   background-color: #f8a055;
@@ -58,8 +64,8 @@ button {
   font-size: 0.8rem;
   padding: 15px 35px;
   cursor: pointer;
-  -webkit-transition: 0.4s ease;
-  transition: 0.4s ease;
+  -webkit-transition: background-color 0.4s ease;
+  transition: background-color 0.4s ease;
 }
 
 button:hover {
@@ -82,6 +88,7 @@ nav {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  padding: 10px 0;
 }
 
 nav .logo {
@@ -115,12 +122,26 @@ nav ul {
           flex-direction: row;
 }
 
+@media (max-width: 767px) {
+  nav ul {
+    width: 100%;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
+
 nav ul li {
   margin-left: 60px;
   font-size: 1rem;
   font-weight: 600;
   padding: 10px 0;
   cursor: pointer;
+}
+
+@media (max-width: 767px) {
+  nav ul li {
+    margin-left: 0px;
+  }
 }
 
 nav ul li:first-child {
@@ -148,6 +169,12 @@ nav ul li a {
   height: 80vh;
 }
 
+@media (max-width: 767px) {
+  .indexHeader, .otherHeader {
+    height: 60vh;
+  }
+}
+
 .indexHeader .container, .otherHeader .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -167,6 +194,14 @@ nav ul li a {
   height: 100%;
 }
 
+@media (max-width: 767px) {
+  .indexHeader .container, .otherHeader .container {
+    -ms-flex-line-pack: center;
+        align-content: center;
+    width: 100%;
+  }
+}
+
 .indexHeader hgroup, .otherHeader hgroup {
   width: 50%;
   padding: 50px;
@@ -174,10 +209,24 @@ nav ul li a {
   background: linear-gradient(to right, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.8));
 }
 
+@media (max-width: 767px) {
+  .indexHeader hgroup, .otherHeader hgroup {
+    width: 100%;
+    padding: 30px;
+    text-align: center;
+  }
+}
+
 .indexHeader hgroup h1, .otherHeader hgroup h1 {
   color: #f8a055;
   text-shadow: 0 0 2px #221f1a;
   font-size: 3rem;
+}
+
+@media (max-width: 767px) {
+  .indexHeader hgroup h1, .otherHeader hgroup h1 {
+    line-height: 1.5;
+  }
 }
 
 .indexHeader hgroup h4, .otherHeader hgroup h4 {
@@ -196,6 +245,12 @@ nav ul li a {
   width: 50%;
   padding: 0px;
   background: none;
+}
+
+@media (max-width: 767px) {
+  .otherHeader hgroup {
+    width: 100%;
+  }
 }
 
 .about {
@@ -217,10 +272,24 @@ nav ul li a {
   padding: 100px 0;
 }
 
+@media (max-width: 767px) {
+  .about {
+    padding: 50px 0;
+  }
+}
+
 .about article {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 48%;
           flex: 0 0 48%;
+}
+
+@media (max-width: 767px) {
+  .about article {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+  }
 }
 
 .about article h2 {
@@ -232,6 +301,13 @@ nav ul li a {
 .about article h2 span {
   font-weight: 400;
   font-style: italic;
+}
+
+@media (max-width: 767px) {
+  .about article h2 {
+    text-align: center;
+    line-height: 1.3;
+  }
 }
 
 .about article h3 {
@@ -256,6 +332,13 @@ nav ul li a {
   background-repeat: no-repeat;
 }
 
+@media (max-width: 767px) {
+  .green, .organic {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.15)), to(rgba(255, 255, 255, 0.15))), url(../img/bg2.jpg);
+    background-image: linear-gradient(rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), url(../img/bg2.jpg);
+  }
+}
+
 .green .container, .organic .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -272,6 +355,15 @@ nav ul li a {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+}
+
+@media (max-width: 767px) {
+  .green .container, .organic .container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .green .container div, .organic .container div {
@@ -291,6 +383,23 @@ nav ul li a {
   margin-bottom: 30px;
 }
 
+@media (max-width: 767px) {
+  .green .container div:first-child, .organic .container div:first-child {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+}
+
+@media (max-width: 767px) {
+  .green .container div:last-child, .organic .container div:last-child {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    margin-bottom: 20px;
+  }
+}
+
 .organic {
   background-color: rgba(90, 87, 78, 0.85);
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.15)), to(rgba(255, 255, 255, 0.15))), url(../img/bg2.jpg);
@@ -298,6 +407,23 @@ nav ul li a {
   background-position: center top;
   background-size: 100% 60%;
   background-repeat: no-repeat;
+}
+
+@media (max-width: 767px) {
+  .organic div:first-child {
+    -webkit-box-ordinal-group: 2 !important;
+        -ms-flex-order: 1 !important;
+            order: 1 !important;
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 767px) {
+  .organic div:last-child {
+    -webkit-box-ordinal-group: 3 !important;
+        -ms-flex-order: 2 !important;
+            order: 2 !important;
+  }
 }
 
 .proizvodnja {
@@ -317,6 +443,15 @@ nav ul li a {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+}
+
+@media (max-width: 767px) {
+  .proizvodnja {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
 }
 
 .proizvodnja article {
@@ -370,12 +505,18 @@ nav ul li a {
   font-size: 0.8rem;
   padding: 15px 35px;
   cursor: pointer;
-  -webkit-transition: 0.4s ease;
-  transition: 0.4s ease;
+  -webkit-transition: background-color 0.4s ease;
+  transition: background-color 0.4s ease;
 }
 
 .proizvodnja article button:hover {
   background-color: #988d51;
+}
+
+@media (max-width: 767px) {
+  .proizvodnja article button {
+    margin-bottom: 30px;
+  }
 }
 
 footer {
@@ -394,6 +535,15 @@ footer {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+}
+
+@media (max-width: 767px) {
+  footer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 footer article:nth-child(1) {
@@ -484,5 +634,11 @@ footer article:last-child p {
 footer article:last-child p span {
   color: #f8a055;
   font-weight: 600;
+}
+
+@media (max-width: 767px) {
+  footer article {
+    padding: 15px 10% !important;
+  }
 }
 /*# sourceMappingURL=style.css.map */
